[package]
name = "RNGdecode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "rngdecode"
path = "src/main.rs"

[lib]
name = "rngdecode_lib"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true